crates/php-parser/tests/snapshots/integration__close_tag_terminates.snap
---
source: crates/php-parser/tests/integration.rs
expression: result2.program
---
{
  "stmts": [
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Int": 1
            },
            "span": {
              "start": 11,
              "end": 12
            }
          }
        ]
      },
      "span": {
        "start": 6,
        "end": 13
      }
    },
    {
      "kind": {
        "InlineHtml": "<html>"
      },
      "span": {
        "start": 15,
        "end": 21
      }
    },
    {
      "kind": {
        "Echo": [
          {
            "kind": {
              "Int": 2
            },
            "span": {
              "start": 32,
              "end": 33
            }
          }
        ]
      },
      "span": {
        "start": 27,
        "end": 34
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 34
  }
}
